<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/title"
        android:contentDescription="@string/app_name" />
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:text="@string/search_menu"/>
    <Button
        android:id="@+id/parts_but"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/parts_but" />

    <Button
        android:id="@+id/auto_but"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auto_but" />

    <Button
        android:id="@+id/spec_but"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spec_but" />

    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:textSize="15dp"
        android:text= "@string/private_cabinet" />
    <Button
        android:id="@+id/newad_but"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_ad" />
    <Button
        android:id="@+id/stat_but"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/statistics" />
    <Button
        android:id="@+id/test_but"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test" />
</LinearLayout>
</ScrollView>

